# sktServer

./: .gitignore  CMakeLists.txt  a.out  client.cpp  client2.cpp  fileinfo.h  img.qrc  main  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  sktServer  sktsender.cpp
